# iecdt-computer-vision-group-proj

./: .gitignore  Evaluation.ipynb  Instrument_data.ipynb  NN_model.ipynb  README.md  create_dataset.py  data_paths.yaml  dataloader.ipynb  dataloader.py  define_dataset.py  fisheye_to_perspective_utils.py  preprocess_training_data.py  preprocessing.ipynb  pyproject.toml  qaqc.ipynb  stereo.ipynb  trad_stereo.py  train.py  train_dino_model.py
config/: train.yaml
config/hydra/launcher/: slurm.yaml
config/wandb/: default.yaml
