[project]
name = "iecdt-computer-vision-group-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "xarray>=2025.1.2",
]
