[project]
name = "iecdt-computer-vision-group-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "fvcore>=0.1.5.post20221221",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "imageio>=2.37.0",
    "iopath>=0.1.10",
    "dask>=2025.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "opencv-python>=4.11.0.86",
    "iopath>=0.1.10",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "torchmetrics>=1.6.1",
    "wandb>=0.19.6",
    "xarray>=2025.1.2",
    "xformers>=0.0.29.post3",
    "transformers>=4.49.0",
]
